# CyberTrace

./: .gitignore  README.md
data/: README.md
data/processed/: features_nsl_kdd.csv
deliverables/: final_presentation.pptx  final_report.docx  final_report.md
docs/: project_plan.md
notebooks/: 01_cluster_exploration.ipynb  02_real_dataset_analysis.ipynb
reports/: real_clusters.csv
scripts/: build_deliverables.py
src/cybertrace/: artifacts.py  cli.py  config.py  datasets.py  extractors.py
submission/CyberTrace_Submission/: Makefile  Project Proposal CS544.docx  SUBMISSION_CONTENTS.txt  pyproject.toml
submission/CyberTrace_Submission/data/processed/: features.csv  features_from_logs.csv
submission/CyberTrace_Submission/data/raw/: example_network_events.csv
submission/CyberTrace_Submission/deliverables/: final_report.md
submission/CyberTrace_Submission/docs/: project_plan.md
submission/CyberTrace_Submission/notebooks/: 02_real_dataset_analysis.ipynb
submission/CyberTrace_Submission/reports/: clusters.csv  example_log_clusters.csv  real_dataset_analysis.md
submission/CyberTrace_Submission/src/cybertrace/: __init__.py  clustering.py  config.py  features.py
submission/CyberTrace_Submission/tests/: test_clustering.py  test_datasets.py  test_features.py
tests/: test_extractors.py
