[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybertrace"
version = "0.1.0"
description = "Clustering and analysis of suspicious network traffic and malicious file characteristics."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "CyberTrace Team" }
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "rich>=13.7",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "mypy>=1.9",
  "pytest>=8.1",
  "ruff>=0.4",
]
pcap = [
  "scapy>=2.5",
]

[project.scripts]
cybertrace = "cybertrace.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
